--- a/_includes/my-head.html
+++ b/_includes/my-head.html
@@ -1,3 +1,4 @@
 {% comment %}<!--
 Use this add elements to the <head/> of the document.
 -->{% endcomment %}
+<meta http-equiv="refresh" content="time; URL=https://cis.unimelb.edu.au/research/artificial-intelligence/Natural-Language-Processing" />
