--- a/_includes/my-body.html
+++ b/_includes/my-body.html
@@ -1,4 +1,4 @@
 {% comment %}<!--
 Use this add elements to the <body/> of the document.
 -->{% endcomment %}
-<meta http-equiv="refresh" content="time; URL=https://cis.unimelb.edu.au/research/artificial-intelligence/Natural-Language-Processing" />
+<meta http-equiv="refresh" content="0; URL=https://cis.unimelb.edu.au/research/artificial-intelligence/Natural-Language-Processing" />
